<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/search_form_background"
        android:clipToOutline="true"
        android:paddingHorizontal="18dp"
        android:paddingTop="18dp"
        android:paddingBottom="16dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyword"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:layout_marginBottom="6dp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            >

            <AutoCompleteTextView
                android:id="@+id/keyword_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/keyword_hint"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:theme="@style/input"
                />
            <ProgressBar
                android:id="@+id/autocomplete_progress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:paddingEnd="5dp"
                android:visibility="invisible"
                android:theme="@style/custom_progress"/>

        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_miles"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:layout_marginBottom="6dp"
            />
        <EditText
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/default_distance"
            android:theme="@style/input"
            android:textColor="@color/white"
            android:importantForAutofill="no"
            android:layout_marginBottom="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:layout_marginBottom="6dp"
            />
        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/spinner_theme"
            android:popupBackground="@color/black"
            android:layout_marginBottom="18dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/green"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/auto_detect_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_detect"
                app:layout_constraintEnd_toStartOf="@+id/auto_detect_switch"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/hint"
                android:layout_marginEnd="8dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/auto_detect_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:theme="@style/auto_detect_switch"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:theme="@style/input"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/enter_the_location"
            android:textColorHint="@color/hint"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/search_btn"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:text="@string/search"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/rounded_corner_search_button"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/clear_btn"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/rounded_corner_clear_button"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>