<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:text="@string/venue_detail_not_available"
        android:textColor="@color/green"
        android:background="@drawable/no_data_textview"
        android:gravity="center"
        android:textStyle="bold"
        android:visibility="gone"
        />
    <ScrollView
        android:id="@+id/valid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        tools:context=".VenueFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:layout_marginHorizontal="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/search_form_background"
                android:paddingBottom="16dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="24dp"
                    android:paddingEnd="5dp"
                    android:layout_marginBottom="30dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/venue_name_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp">
                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/venue_name_header"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />
                        <TextView
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:id="@+id/venue_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:scrollHorizontally="true"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:textColor="@color/green"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/venue_name_header"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/address_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp">
                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/address_header"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />
                        <TextView
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:id="@+id/address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:scrollHorizontally="true"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:textColor="@color/green"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/address_header"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/city_state_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp">
                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/city_state_header"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:text="@string/city_state"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />
                        <TextView
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:id="@+id/city_state"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:scrollHorizontally="true"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:textColor="@color/green"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/city_state_header"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/contact_info_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp">
                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/contact_info_header"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_info"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />
                        <TextView
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:id="@+id/contact_info"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:scrollHorizontally="true"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:textColor="@color/green"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/contact_info_header"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:layout_marginHorizontal="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp">
                    <fragment
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/venue_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rules_background"
                android:paddingHorizontal="10dp"
                android:paddingBottom="16dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/open_hours_entry"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/open_hours"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"/>
                    <TextView
                        android:ellipsize="end"
                        android:id="@+id/open_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/general_rules_entry"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/general_rules"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"/>
                    <TextView
                        android:ellipsize="end"
                        android:id="@+id/general_rules"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/child_rules_entry"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/child_rules"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"/>
                    <TextView
                        android:ellipsize="end"
                        android:id="@+id/child_rules"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
